[package]
name = "cli"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.34", features = ["derive"]}
parser = { path = "../parser" }
proto = { path = "../proto" }
estree = { path = "../estree" }
transpiler = { path = "../transpiler" }
code_generation = { path = "../code_generation" }
